Fix overflow page

--- a/css/preface.css
+++ b/css/preface.css
@@ -75,6 +75,7 @@
 }
 
 .minigame-row {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
